LAYOUT-fix-42a24.0: Fixed broken layout

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -139,6 +139,7 @@
     jQuery("#left_menu td a").css('color', 'white');
   </script>
   <!-- ENDIF -->
+</div>
 </td>
 <td valign="top">
   <!-- IF MENU_CUSTOMIZE -->
