--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -1,4 +1,3 @@
-<!-- IF .menu -->
 <script type="text/javascript">
   sn_timers.unshift({'id': 'menu_admin_server_time', 'type': TIMER_CLOCK_REALTIME, 'options': {
     'format': 3,
@@ -39,9 +38,11 @@
     <!-- DEFINE $MENU_START_BUTTON_PIN = '{LA_menu_pin}' -->
     <!-- DEFINE $MENU_START_BUTTON_SHOW = '{LA_menu_show}' -->
     <!-- DEFINE $MENU_START_HIDDEN = 'MENU_START_HIDDEN' -->
+    <!-- DEFINE $MENU_START_HIDDEN_STYLE = "display:none;" -->
   <!-- ELSE -->
     <!-- DEFINE $MENU_START_BUTTON_PIN = '{LA_menu_unpin}' -->
     <!-- DEFINE $MENU_START_BUTTON_SHOW = '{LA_menu_hide}' -->
+    <!-- DEFINE $MENU_START_HIDDEN_STYLE = '' -->
   <!-- ENDIF -->
 
   <!-- IF PLAYER_OPTION_MENU_UNPIN_ABSOLUTE -->
@@ -54,7 +55,9 @@
     <!-- DEFINE $MENU_SHOW_HIDE_CLASS = 'MENU_SHOW_HIDE_HIDDEN' -->
   <!-- ENDIF -->
 <!-- ENDIF -->
-  <table cellspacing="0" cellpadding="0" id="left_menu" class="{$MENU_BIG_BUTTONS} {$MENU_NARROW_CELLS} {$MENU_START_HIDDEN} {$MENU_ABSOLUTE}"<!-- IF $MENU_START_HIDDEN --> style="display:none"<!-- ENDIF -->><!-- BEGIN menu -->
+
+<div id="__menu">
+  <table cellspacing="0" cellpadding="0" id="left_menu" class="{$MENU_BIG_BUTTONS} {$MENU_NARROW_CELLS} {$MENU_START_HIDDEN} {$MENU_ABSOLUTE}" style="{$MENU_START_HIDDEN_STYLE}"><!-- BEGIN menu -->
   <!-- IF (! menu.AUTH_LEVEL || menu.AUTH_LEVEL <= AUTH_LEVEL) && ! menu.DISABLED -->
 
     <!-- IF menu.LEVEL == 'header' --><!-- DEFINE $TX = 'th' --><!-- ELSE --><!-- DEFINE $TX = 'td' --><!-- ENDIF -->
@@ -140,17 +143,14 @@
   </script>
   <!-- ENDIF -->
 </div>
-</td>
-<td valign="top">
-  <!-- IF MENU_CUSTOMIZE -->
-    <input type="button" id="left_menu_show" value="{$MENU_START_BUTTON_SHOW}" class="{$MENU_SHOW_HIDE_CLASS}"/>
-    <script type="text/javascript">
-      jQuery(document).ready(function(){
-        MENU_HIDDEN ? jQuery('#left_menu').attr('menu_hidden', '1') : (
-          jQuery('#left_menu_show').offset({top: LEFT_MENU_SHOW_BUTTON_TOP, left: LEFT_MENU_SHOW_BUTTON_LEFT + jQuery('#left_menu').width()}).css('visibility', 'visible')
-        );
-      });
-    </script>
-  <!-- ELSE -->&nbsp;<!-- ENDIF --></td>
-<td width="100%" valign="top" align="center"><div style="margin: 0 auto">
+
+<!-- IF MENU_CUSTOMIZE -->
+<input type="button" id="left_menu_show" value="{$MENU_START_BUTTON_SHOW}" class="{$MENU_SHOW_HIDE_CLASS}"/>
+<script type="text/javascript">
+  jQuery(document).ready(function(){
+    MENU_HIDDEN ? jQuery('#left_menu').attr('menu_hidden', '1') : (
+        jQuery('#left_menu_show').offset({top: LEFT_MENU_SHOW_BUTTON_TOP, left: LEFT_MENU_SHOW_BUTTON_LEFT + jQuery('#left_menu').width()}).css('visibility', 'visible')
+      );
+  });
+</script>
 <!-- ENDIF -->
