--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -186,7 +186,7 @@ planet = {
 <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
 <!-- INCLUDE eco_queue -->
 
-<table class="markup">
+<table class="markup" width="100%">
 <tr>
   <td align="center" valign="top">
     <table id="unit_table">
