--- a/design/templates/OpenGame/admin/admin_ptl_test.tpl.html
+++ b/design/templates/OpenGame/admin/admin_ptl_test.tpl.html
@@ -86,6 +86,31 @@
     <td class="ptl_status"></td>
     <th>General image</th>
   </tr>
+  <tr>
+    <td>&#123;I_navbar_research|html|height="20%"|width="20%"&#125;</td>
+    <td class="ptl_etalon"><img src="{D_SN_ROOT_VIRTUAL}design/images/navbar_research_64x64.png" height="20%" width="20%"/></td>
+    <td class="ptl_result">{I_navbar_research|html|height="20%"|width="20%"}</td>
+    <td class="ptl_status"></td>
+    <th>General image with attributes - height 20%, width 20%</th>
+  </tr>
+
+  <tr>
+    <td>&#123;I_NO_IMAGE&#125;</td>
+    <td class="ptl_etalon"><img src="{D_SN_ROOT_VIRTUAL}design/images/navbar_research_64x64.png" height="20%" width="20%"/></td>
+    <td class="ptl_result">{I_NO_IMAGE}</td>
+    <td class="ptl_status"></td>
+    <th>No image exists</th>
+  </tr>
+
+
+
+  <!--<tr>-->
+    <!--<td>&#123;I_[$PLANET_GOVERNOR_ID]|html|height="100%"&#125;</td>-->
+    <!--<td class="ptl_etalon"><img src="{D_SN_ROOT_VIRTUAL}design/images/navbar_research_64x64.png" height="100%" /></td>-->
+    <!--<td class="ptl_result">{I_[$PLANET_GOVERNOR_ID]|html|height="100%"}</td>-->
+    <!--<td class="ptl_status"></td>-->
+    <!--<th>General image with attributes - height 100%</th>-->
+  <!--</tr>-->
 
 </table>
 
