TEMPLATE-feat-42a24.7: {R_xxx} tag. Also more refactoring. And tests

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -174,9 +174,8 @@
         <!-- DEFINE $NAVBAR_VERTICAL_CLASS = 'navbar_v' -->
       <!-- ENDIF -->
 
-
       <div id="__navbar_wrapper" class="{$NAVBAR_VERTICAL_CLASS}">
-      <!-- IF __DISPLAY_NAVBAR -->
+      <!-- IF GLOBAL_DISPLAY_NAVBAR -->
         <!-- INCLUDE navbar -->
       <!-- ENDIF -->
         <div id="__content_wrapper">
