TEMPLATE-misc-42a24.8: Refactoring. More tests

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -164,7 +164,7 @@
     <!-- ENDIF -->
 
     <div id="__page">
-      <!-- IF .menu && __DISPLAY_MENU -->
+      <!-- IF .menu && GLOBAL_DISPLAY_MENU -->
         <!-- INCLUDE menu -->
       <!-- ENDIF -->
 
