NAVBAR-fix-42a25.1: Fixed error with wrong storage size in popup on VERY large storages

--- a/design/templates/OpenGame/navbar_resources.tpl.html
+++ b/design/templates/OpenGame/navbar_resources.tpl.html
@@ -31,21 +31,21 @@
     "metal": {
       start_value: Math.floatVal('{PLANET_METAL}'),
       per_second: Math.floatVal('{PLANET_METAL_PERHOUR}' / 3600),
-      max_value: Math.intVal('{PLANET_METAL_MAX}'),
+      max_value: Math.floatVal('{PLANET_METAL_MAX}'),
       round: Math.intVal('{RESOURCE_ROUNDING}'),
       resourceNameLongId: 'sys_metal'
     },
     "crystal": {
       start_value: Math.floatVal('{PLANET_CRYSTAL}'),
       per_second: Math.floatVal('{PLANET_CRYSTAL_PERHOUR}' / 3600),
-      max_value: Math.intVal('{PLANET_CRYSTAL_MAX}'),
+      max_value: Math.floatVal('{PLANET_CRYSTAL_MAX}'),
       round: Math.intVal('{RESOURCE_ROUNDING}'),
       resourceNameLongId: 'sys_crystal'
     },
     "deuterium": {
       start_value: Math.floatVal('{PLANET_DEUTERIUM}'),
       per_second: Math.floatVal('{PLANET_DEUTERIUM_PERHOUR}' / 3600),
-      max_value: Math.intVal('{PLANET_DEUTERIUM_MAX}'),
+      max_value: Math.floatVal('{PLANET_DEUTERIUM_MAX}'),
       round: Math.intVal('{RESOURCE_ROUNDING}'),
       resourceNameLongId: 'sys_deuterium'
     },
