CODE-misc-42a25.2: Removed $dpath variable. Also some code refactoring

--- a/design/templates/OpenGame/_global_footer.tpl.html
+++ b/design/templates/OpenGame/_global_footer.tpl.html
@@ -7,6 +7,7 @@
           </div> <!-- __addition_wrapper -->
         </div> <!-- __content_wrapper -->
       </div><!-- __navbar_wrapper -->
+          </td></tr></table>
     </div><!-- __page -->
 
     <div id="debug" style="text-align: left"></div>
