--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -88,7 +88,6 @@
         });
       }
 
-      var dpath = '{dpath}';
       var SN_GOOGLE = parseInt('{SN_GOOGLE}') ? 1 : 0;
     </script>
 
@@ -164,9 +163,14 @@
     <!-- ENDIF -->
 
     <div id="__page">
+      <table class="markup" width="100%">
+        <tr>
       <!-- IF .menu && GLOBAL_DISPLAY_MENU -->
+        <td align="left" valign="top">
         <!-- INCLUDE menu -->
+        </td>
       <!-- ENDIF -->
+        <td align="center" valign="top" width="100%">
 
 <!-- DEFINE $NAVBAR_VERTICAL = 0 -->
 
