--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -157,7 +157,7 @@ uni_row[{galaxyrow.PLANET_NUM}] = {
       <tr><td>{L_gl_mipattack}</td><td><img src="design/images/icon_missile.png" border=0 style="height: 1.5em" /></td></tr>
       <tr><td>{L_stat_details}</td><td><img src="{I_menu_empire_emperor}" border=0 style="height: 1.5em" /></td></tr>
       <tr><td>{L_gl_sendmess}</td><td><img src="design/images/icon_mail.gif" border=0 style="height: 1.5em" /></td></tr>
-      <tr><td>{L_gl_buddyreq}</td><td><img src="{dpath}img/b.gif" border=0 style="height: 1.5em" /></td></tr>
+      <tr><td>{L_gl_buddyreq}</td><td><img src="{I_icon_buddy}" border=0 style="height: 1.5em" /></td></tr>
       <tr><td>{L_gl_stats}</td><td><img src="design/images/icon_statistics.png" border=0  style="height: 1.5em" /></td></tr>
     </table>
   </span>
