CODE-misc-42a25.4: Signature of display() function simplified

--- a/design/templates/OpenGame/_page.tpl.html
+++ b/design/templates/OpenGame/_page.tpl.html
@@ -1,3 +1,4 @@
+<!-- IF GLOBAL_DISPLAY_WRAP -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="{LANG_DIRECTION}" lang="{LANG_LANGUAGE}" xml:lang="{LANG_LANGUAGE}">
   <head>
@@ -14,7 +15,7 @@
     <meta http-equiv="Cache-Control" content="no-cache" />
     <!-- IF ADV_SEO_META_KEYWORDS --><meta name="keywords" content="{ADV_SEO_META_KEYWORDS}" /><!-- ENDIF -->
     <!-- IF ADV_SEO_META_DESCRIPTION --><meta name="description" content="{ADV_SEO_META_DESCRIPTION}" /><!-- ENDIF -->
-    {-meta-}
+    {GLOBAL_META_TAGS}
 
     <link rel="shortcut icon" href="{D_SN_ROOT_VIRTUAL}favicon.ico?{C_var_db_update}" />
 
@@ -189,3 +190,30 @@
         <!-- ENDIF -->
         <div id="__content">
           <table class="markup" width="100%"><tr><td align="center">
+<!-- ENDIF -->
+
+{GLOBAL_PAGE_CONTENT}
+
+<!-- IF GLOBAL_DISPLAY_WRAP -->
+          <div id="copyright">
+            Project &quot;<a href="http://supernova.ws"><span id="supernova_ws">Sup<span>erNo</span>va<span>.W</span>S</span></a>&quot; Rel<span>ease {D_SN_RELEASE} V</span>{D_SN_VERSION} &copy; 20<span>09-{CURRENT_YEAR} Go</span>rlum<br>
+            In<span>spired by X</span>Nova Ra<span>geRe<span>pac</span>k v2</span>26
+          </div>
+            </td></tr></table>
+          </div> <!-- __content -->
+          </div> <!-- __addition_wrapper -->
+        </div> <!-- __content_wrapper -->
+      </div><!-- __navbar_wrapper -->
+          </td></tr></table>
+    </div><!-- __page -->
+
+    <div id="debug" style="text-align: left"></div>
+    <script type="application/javascript">
+      document_ready();
+      jQuery(document).ready(function () {
+        jQuery('.benchmark').append(', JS run: ' + ((new Date().valueOf() - timeBrowser.valueOf()) / 1000) + 's');
+      });
+    </script>
+  </body>
+</html>
+<!-- ENDIF -->
