--- a/design/templates/OpenGame/ube_combat_report.tpl.html
+++ b/design/templates/OpenGame/ube_combat_report.tpl.html
@@ -1,5 +1,7 @@
 <h1>{PAGE_HEADER}</h1>
+<!-- IF UBE_REPORT_CYPHER -->
 <div>{L_ube_report_info_page_header_cypher} {UBE_REPORT_CYPHER}</div>
+<!-- ENDIF -->
 
 <table style="margin-top: 1em;">
   <tr>
